--- a/template/new.html
+++ b/template/new.html
@@ -1,5 +1,6 @@
 <div class="content-wrapper">
     <div class="container">
-        <h2>Oops! Looks like we haven't indexed this version of this repo yet. We are working on that now...</h2>
+        <h2>Oops!</h2>
+        <p>Looks like we haven't indexed this version of this repo yet. Check back in a few minutes.</p>
     </div>
 </div>
