--- a/template/_navbar.html
+++ b/template/_navbar.html
@@ -2,6 +2,7 @@
     <a class="navbar-brand" href="/">Doc</a>
     {{ partial "navbar" }}
     <div class="navbar-content ml-auto">
+        <button class="btn m-10 mr-15" type="button" onclick="window.location = 'https://github.com/ripta/crds-dev-doc'"><i class="fa-brands fa-github"></i></button>
         <button class="btn btn-primary" type="button" onclick="halfmoon.toggleDarkMode()"><i class="fas fa-moon" aria-hidden="true"></i><span class="sr-only">Toggle Dark Mode</span></button>
     </div>
 </nav>
