--- a/template/home.html
+++ b/template/home.html
@@ -1,13 +1,19 @@
 <div class="position-fixed top-0 right-0 z-10">
+    <button class="btn m-10 mr-15" type="button" onclick="window.location = 'https://github.com/ripta/crds-dev-doc'"><i class="fa-brands fa-github"></i></button>
     <button class="btn btn-primary m-10 mr-15" type="button" onclick="halfmoon.toggleDarkMode()"><i class="fas fa-moon" aria-hidden="true"></i><span class="sr-only">Toggle Dark Mode</span></button>
 </div>
 
 <div class="content-wrapper home-page">
     <div class="container mt-md-20">
         <div class="content hero">
-            <h1 class="text-center site-title">doc.crds.dev</h1>
+            <h1 class="text-center site-title">
+                crds.r8y.page
+            </h1>
             <div id="repo_go"></div>
-            <p class="text-center">doc.crds.dev is and always will be <a href="https://github.com/crdsdev/doc">free and open source</a>.</p>
+            <p class="text-center">
+                The code for crds.r8y.page can be found on GitHub at <a href="https://github.com/ripta/crds-dev-doc">ripta/crds-dev-doc</a>;<br>
+                it was forked from <a href="https://github.com/crdsdev/doc">crdsdev/doc</a>, which hadn't been updated in a while.
+            </p>
             <p>
                 Only public repos on github.com are currently supported. Repositories must contain the CRD manifests in
                 YAML format (e.g., not JSON, not a helm chart template), have the kind <code>CustomResourceDefinition</code>,
