template: initial stab updating to halfmoon v2

--- a/template/home.html
+++ b/template/home.html
@@ -52,7 +52,6 @@
 
 {{ template "_scripts" . }}
 <script type="module">
-    const { render } = ReactDOM;
     const { useState, useRef, useEffect } = React;
     const { html } = htmReact;
 
@@ -96,7 +95,8 @@
             </div>
         </form>`;
     }
-    render(html`<${RepoGo} />`, document.getElementById("repo_go"));
+    const root = ReactDOM.createRoot(document.getElementById("repo_go"));
+    root.render(html`<${RepoGo} />`);
 </script>
 
 <style>
