--- a/template/org.html
+++ b/template/org.html
@@ -33,7 +33,6 @@
 <script type="module">
     import { formatRelative } from 'https://cdn.jsdelivr.net/npm/date-fns/+esm';
 
-    const { render } = ReactDOM;
     const { html } = htmReact;
     const { useTable, useSortBy, useGlobalFilter  } = ReactTable;
 
@@ -112,7 +111,8 @@
         </div>`;
     }
 
-    render(html`<${CRDTable} />`, document.getElementById("crds"));
+    const root = ReactDOM.createRoot(document.getElementById("crds"));
+    root.render(html`<${CRDTable} />`);
 </script>
 <style>
     #crds .sort-header {
