--- a/template/doc.html
+++ b/template/doc.html
@@ -19,7 +19,6 @@
     {{ . }}
 </script>
 <script type="module">
-    const { render } = ReactDOM;
     const { useMemo, useState, useEffect, useCallback } = React;
     const { html } = htmReact;
     const bus = new EventEmitter3();
@@ -173,7 +172,8 @@
         </div>`;
     }
 
-    render(html`<${CRD} />`, document.querySelector('.container'));
+    const root = ReactDOM.createRoot(document.querySelector('.container'));
+    root.render(html`<${CRD} />`);
 </script>
 <script defer src="https://unpkg.com/prismjs@1/components/prism-core.min.js"></script>
 <script defer src="https://unpkg.com/prismjs@1/plugins/autoloader/prism-autoloader.min.js"></script>
