--- a/template/list_group_version.html
+++ b/template/list_group_version.html
@@ -10,7 +10,6 @@
 <script type="module">
     import { formatRelative } from 'https://cdn.jsdelivr.net/npm/date-fns/+esm';
 
-    const { render } = ReactDOM;
     const { html } = htmReact;
     const { useTable, useSortBy, useGlobalFilter  } = ReactTable;
 
@@ -85,7 +84,8 @@
         </div>`;
     }
 
-    render(html`<${KindsTable} />`, document.getElementById("kinds"));
+    const root = ReactDOM.createRoot(document.getElementById("kinds"));
+    root.render(html`<${KindsTable} />`);
 </script>
 <style>
     #kinds .sort-header {
