--- a/template/home.html
+++ b/template/home.html
@@ -10,7 +10,7 @@
     <div class="container">
         <div class="content hero">
             <h1 class="text-center site-title">
-                crds.r8y.page
+                Custom Resource Definition Docs
             </h1>
             <div id="repo_go" class="mt-3 mb-4"></div>
             <p>
@@ -96,22 +96,12 @@
 
 <style>
     .home-page .hero {
-        margin-top: 10vh;
+        margin-top: 5vh;
         margin-bottom: 5vh;
     }
 
     .home-page .hero .site-title {
         margin-bottom: 2rem;
-    }
-
-    .home-page .org-links {
-        display: flex;
-        flex-direction: column;
-        row-gap: 1rem;
-    }
-
-    .home-page .org-link {
-        font-size: 2rem;
     }
 
     @media screen and (max-width: 575px) {
