--- a/static/root.css
+++ b/static/root.css
@@ -1,4 +1,4 @@
-@import url("https://cdnjs.cloudflare.com/ajax/libs/Halfmoon/2.0.0/css/halfmoon.min.css");
+@import url("https://unpkg.com/Halfmoon@2.0.2/css/halfmoon.min.css");
 
 :root {
     --primary-color: var(--indigo-color);
