template: add faq entry about feature requests and patches

--- a/template/home.html
+++ b/template/home.html
@@ -82,6 +82,21 @@
                         </ul>
                     </div>
                 </details>
+
+                <details class="collapse-panel border border-start mt-2">
+                    <summary class="collapse-header position-relative bg-primary-subtle p-2 ps-3">
+                        <strong>Do you accept feature requests and patches?</strong>
+                    </summary>
+                    <div class="collapse-content p-3">
+                        <p>
+                            We absolutely accept patches for bug fixes. For more elaborate features, please
+                            open an issue first so we can discuss the design.
+                        </p>
+                        <p>
+                            You can find <a href="https://github.com/ripta/crds-dev-doc">the project repository</a> on GitHub.
+                        </p>
+                    </div>
+                </details>
             </div>
         </div>
     </div>
