template: standardize table headings

--- a/template/home.html
+++ b/template/home.html
@@ -15,7 +15,7 @@
             <div id="repo_go" class="mt-3 mb-4"></div>
 
             <p class="mt-3 mb-4 text-center">
-                You can also explore <a href="/recent">the most recently indexed repositories</a>,
+                You can also explore <a href="/recent">the most recent tags</a>,
                 or browse <a href="/gvk">all indexed CRDs by group</a>.
             </p>
 
