--- a/template/list_gvk.html
+++ b/template/list_gvk.html
@@ -29,7 +29,7 @@
             Cell: ({ row: { original }, value }) => html`<a href=${`/repo/${original.Repo}/${Group}/${Kind}/${Version}@${original.Tag}`}>${value}</a>`,
         },
         {
-            Header: 'Timestamp',
+            Header: 'Tagged At',
             accessor: 'Timestamp',
         },
     ];
